<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation">


    </android.support.design.widget.BottomNavigationView>

    <ScrollView
        android:id="@+id/scrollView_picker"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="64dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/layout_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:context=".MainActivity">

            <TextView
                android:id="@+id/textView_picker_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/description_picker"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/layout_picker_item_table"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView_picker_description">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView_picker_item"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/name_item" />

                    <TextView
                        android:id="@+id/textView_picker_weight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/name_weight" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_picker_items"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/checkBox_picker_freeze"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/name_freeze"
                app:layout_constraintBottom_toBottomOf="@+id/button_picker_add_item"
                app:layout_constraintEnd_toStartOf="@+id/button_picker_read"
                app:layout_constraintStart_toEndOf="@+id/button_picker_remove_all"
                app:layout_constraintTop_toTopOf="@+id/button_picker_add_item" />

            <ImageButton
                android:id="@+id/button_picker_add_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_picker_item_table"
                app:srcCompat="@android:drawable/ic_menu_add"
                android:contentDescription="@string/name_add_item" />

            <ImageButton
                android:id="@+id/button_picker_remove_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/button_picker_add_item"
                app:layout_constraintStart_toEndOf="@+id/button_picker_add_item"
                app:layout_constraintTop_toTopOf="@+id/button_picker_add_item"
                app:srcCompat="@android:drawable/ic_menu_delete"
                android:contentDescription="@string/name_remove_all"/>

            <ImageButton
                android:id="@+id/button_picker_read"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/button_picker_add_item"
                app:layout_constraintEnd_toStartOf="@+id/button_picker_save"
                app:layout_constraintTop_toTopOf="@+id/button_picker_add_item"
                app:srcCompat="@android:drawable/ic_menu_recent_history"
                android:contentDescription="@string/name_read"/>

            <ImageButton
                android:id="@+id/button_picker_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/button_picker_add_item"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/button_picker_add_item"
                app:srcCompat="@android:drawable/ic_menu_save"
                android:contentDescription="@string/name_save"/>

            <Button
                android:id="@+id/button_picker_select_one"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="8dp"
                android:text="@string/name_select_one"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="@+id/button_picker_unselect_all"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/button_picker_unselect_all"
                app:layout_constraintTop_toTopOf="@+id/button_picker_unselect_all" />

            <ImageButton
                android:id="@+id/button_picker_unselect_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/name_unselect_all"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_picker_add_item"
                app:srcCompat="@android:drawable/ic_menu_revert" />

            <TextView
                android:id="@+id/textView_picker_hint"
                android:layout_width="368dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/description_picker_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_picker_unselect_all" />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
